--- a/app/views/ratings/_internship_job_info.html.erb
+++ b/app/views/ratings/_internship_job_info.html.erb
@@ -1,7 +1,10 @@
   <div class="row">
     <div class="col-xs-12 col-lg-6">
       <div class="dropdown-button-container">
-        <%= f.input :job_position, placeholder: 'Job Position', label: false, input_html: {class: "rating-form-fields"} %>
+        <p class="title">
+          Job Position
+        </p>
+        <%= f.input :job_position, placeholder: false, label: false, input_html: {class: "rating-form-fields"} %>
         <div class="dropdown-arrow">
           <div class="arrow"></div>
         </div>
@@ -9,7 +12,10 @@
     </div>
     <div class="col-xs-12 col-lg-6">
       <div class="dropdown-button-container">
-        <%= f.input :department, placeholder: 'Department', label: false, input_html: {class: "rating-form-fields"} %>
+        <p class="title">
+          Department
+        </p>
+        <%= f.input :department, placeholder: false, label: false, input_html: {class: "rating-form-fields"} %>
         <div class="dropdown-arrow">
           <div class="arrow"></div>
         </div>
