--- a/app/assets/stylesheets/components/_internship_start_year.scss
+++ b/app/assets/stylesheets/components/_internship_start_year.scss
@@ -39,7 +39,6 @@ and (orientation: portrait) {
     .internship-start-year-hover {
       border: 2px solid #ffbd23;
       color: #ffbd23;
-      font-weight: 600;
     }
     label {
       color: #8b8c8f;
@@ -55,22 +54,27 @@ and (orientation: portrait) {
       &:hover {
         border: 2px solid #ffbd23;
         color: #ffbd23;
-        font-weight: 600;
       }
       input {
         display: none;
       }
     }
-    &:first-child label {
+    &:first-child {
       border-top-left-radius: 6px;
       border-bottom-left-radius: 6px;
     }
-    &:last-child label {
+    &:last-child {
       border-top-right-radius: 6px;
       border-bottom-right-radius: 6px;
     }
-    &:nth-child(3), &:nth-child(4), &:nth-child(5) {
+    &:nth-child(2), &:nth-child(3), &:nth-child(4) {
       border-left: 2px solid #e0e5ec;
     }
+  }
+}
+
+@media (max-width: 768px) {
+  .rating_internship_start_year {
+    max-width: 300px;
   }
 }
