--- a/app/assets/stylesheets/components/_rating_form.scss
+++ b/app/assets/stylesheets/components/_rating_form.scss
@@ -2,6 +2,7 @@
 .body-rating {
   background-color: #f6f8fa;
   overflow-x:hidden;
+  position: relative;
 }
 
 .container {
@@ -49,8 +50,11 @@ and (-webkit-min-device-pixel-ratio: 1) {
     max-width: 651px;
     position: relative;
     margin-top: 50px;
-    margin-bottom: 75px;
+    margin-bottom: 20px;
     display: flex;
+    .fa {
+      color: #c3c3c3;
+    }
     h3 {
       font-size: 25px;
       color: #4c4a4e;
@@ -73,43 +77,167 @@ and (-webkit-min-device-pixel-ratio: 1) {
 }
 
 /// Media query for mobile w/ 320px width, according to designs
-@media only screen
-and (min-device-width: 320px)
-and (max-device-width: 480px)
-and (-webkit-min-device-pixel-ratio: 2)
-and (orientation: portrait) {
+@media (max-width: 768px) {
+
+  #section_2 {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .yes-no-field {
+    width: 300px;
+    margin: 0 auto;
+    .sub-header {
+      margin: 0;
+    }
+  }
+
+  .comments-conditions {
+    margin: 0 !important;
+    max-width: 300px;
+    .rating-read-conditions {
+      color: #8b8c8f;
+    }
+    .rating_additional_comments {
+      font-size: 14px;
+      line-height: 24px;
+      .comment-box {
+        height: 160px;
+      }
+    }
+  }
+
+  .titles-section-2 {
+    width: 300px;
+    h4 {
+      font-size: 14px;
+      font-weight: 600;
+      text-align: left;
+      margin-bottom: 0;
+      line-height: 30px;
+    }
+  }
+
+  .header-end-form {
+    display: flex;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 300px;
+    .icon-end {
+      background-image: image-url('png_@1x/icon_privacy@1x.png');
+      background-size: cover;
+      width: 37px;
+      height: 37px;
+    }
+    .text-end-form {
+      flex: 0 0 80%;
+    }
+  }
+
+  .user-creation {
+    input {
+      max-width: 300px;
+      margin: 0 auto;
+    }
+  }
+
+
+  .dropdown-button-container {
+    max-width: 300px;
+    margin: 0 auto;
+    input {
+      width: 300px;
+    }
+  }
+
+  #section_1 {
+    .progress-bar-top {
+      width: 100vw;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-radius: 0px;
+      height: 5px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      .green {
+        flex: 0 0 20%;
+        background-color: #74b05d;
+        height: 100%;
+      }
+      .gray {
+        flex: 0 0 80%;
+        background-color: #e0e5ec;
+        height: 100%;
+      }
+    }
+  }
+
+  #section_2 {
+    margin-top: 20px;
+    .progress-bar-top {
+      width: 100vw;
+      border-radius: 0px;
+      height: 5px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      .green {
+        flex: 0 0 80%;
+        background-color: #74b05d;
+        height: 100%;
+      }
+      .gray {
+        flex: 0 0 20%;
+        background-color: #e0e5ec;
+        height: 100%;
+      }
+    }
+  }
 
   .header-section-1 {
-    max-width: 280px;
-    position: relative;
-    margin-top: 12px;
-    margin-bottom: 8px;
+    max-width: 300px;
+    margin: 12px auto;
     display: flex;
     color: #4c4a4e;
+    border-radius: 0px;
     h3 {
       font-size: 14px;
+      font-weight: 600;
     }
     p {
       font-size: 12px;
     }
+    .fa {
+      color: #c3c3c3;
+    }
   }
   .divider {
-    height: 3px;
-    border: solid 1px #dddddd;
+    height: 1px;
+    border-bottom: solid 1px #dddddd;
     margin-top: 9px;
   }
 
   .header-section-2 {
-    max-width: 800px;
-    display: flex;
-    justify-content: center;
+    max-width: 300px;
     position: relative;
-    margin-top: 50px;
-    margin-bottom: 75px;
+    margin: 12px 10px;
+    display: flex;
+    color: #4c4a4e;
     h3 {
-      font-size: 25px;
-      color: #4c4a4e;
-      line-height: 1;
+      font-size: 14px;
+      font-weight: 600;
+    }
+    p {
+      font-size: 12px;
+    }
+    .fa {
+      color: #c3c3c3;
     }
   }
   hr {
@@ -134,13 +262,7 @@ and (orientation: portrait) {
 
 
 // CSS for end form for mobile versions
-.header-end-form {
-  max-width: 651px;
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-  margin-bottom: 20px;
-}
+
 
 @media only screen
 and (min-device-width: 320px)
@@ -148,26 +270,36 @@ and (max-device-width: 480px)
 and (-webkit-min-device-pixel-ratio: 2)
 and (orientation: portrait) {
 
-.icon-end {
-  display: none;
-  width: 42px;
-}
+  .icon-end {
+    display: none;
+    width: 42px;
+  }
 
-.or-end-form {
-  text-align: center;
-}
+  .or-end-form {
+    text-align: center;
+  }
 
-.divider-end-form {
-  display: none;
-}
+  .divider-end-form {
+    display: none;
+  }
 }
 ///
 
 /// End form for desktop
-@media screen
-and (min-device-width: 1200px)
-and (max-device-width: 1600px)
-and (-webkit-min-device-pixel-ratio: 1) {
+
+@media (min-width: 1200px) {
+
+  .yes-no-field {
+    height: 105px;
+  }
+
+  .header-end-form {
+    max-width: 651px;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 20px;
+  }
 
   .icon-end {
     background-image: image-url('png_@1x/icon_privacy@1x.png');
@@ -278,6 +410,9 @@ and (-webkit-min-device-pixel-ratio: 1) {
   flex-direction: column;
   align-items: center;
   max-width: 380px;
+  .dropdown-button-container {
+    margin: 10px auto;
+  }
   h4 {
     font-weight: 600;
     font-size: 16px;
@@ -356,7 +491,6 @@ and (orientation: portrait) {
 .yes-no-field {
   display: flex;
   flex-direction: column;
-  height: 105px;
   justify-content: space-between;
   align-items: flex-start;
 }
@@ -438,7 +572,6 @@ and (orientation: portrait) {
 
 
 
-//// STOMME KUT ICONEN WERKEN NOG TOTAAAAL NIET
 
 .rating_internship_selection-2-icons {
   .radio {
@@ -559,7 +692,6 @@ and (orientation: portrait) {
   }
 }
 
-///// EINDE VAN STOMME KUTICONEN
 
 
 //////
