--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700");
+
+$base-font: "Open Sans", "Helvetica", "sans-serif";
+$header-font: "Open Sans", "Helvetica", "sans-serif";
 
 $base-size: 16px;
 $base-height: 1.4;
@@ -7,6 +10,8 @@ $brand-color: #D23333;
 $red: #EE5F5B;
 $blue: #469AE0;
 $yellow: #FDB631;
-$orange: #E67E22;
+$orange: #ffbd23;
 $green: #32B796;
 $gray: #000000;
+
+
