--- a/app/views/ratings/_internship_form_end.html.erb
+++ b/app/views/ratings/_internship_form_end.html.erb
@@ -21,12 +21,12 @@
   <div class="row">
     <div class="col-xs-12 col-md-6">
       <div class="user-creation">
-        <%= f.input :reviewer_name, label: false, placeholder: "Your full name", input_html: { class: "rating-form-fields" }%>
+        <%= f.input :reviewer_name, label: false, placeholder: "First and Last Name", input_html: { class: "rating-form-fields" }%>
       </div>
     </div>
     <div class="col-xs-12 col-md-6">
       <div class="user-creation">
-        <%= f.input :reviewer_email, label: false, placeholder: "Your emailaddress", input_html: { class: "rating-form-fields" } %>
+        <%= f.input :reviewer_email, label: false, placeholder: "Email", input_html: { class: "rating-form-fields" } %>
       </div>
     </div>
   </div>
