change button text align

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -3,11 +3,8 @@
   width: 169px;
   border-radius: 4px;
   margin: 50px 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-size: 20px;
-  color: white !important;
+  padding-top: 10px;
   &:hover {
     text-decoration: none;
   }
