--- a/app/assets/stylesheets/components/_rating_form.scss
+++ b/app/assets/stylesheets/components/_rating_form.scss
@@ -525,10 +525,14 @@ and (orientation: portrait) {
       background-image: image-url('png_@2x/btn_radio_selected@2x.png.png');
       color: #ffbd23;
     }
+    &:checked ~ .section-2-radio {
+      color: #ffbd23;
+    }
   }
   display: flex;
   justify-content: space-around;
   align-items: center;
+  font-weight: 400;
   span {
     margin-right: 23px;
     margin-top: 10px;
@@ -549,6 +553,8 @@ and (orientation: portrait) {
     justify-content: space-around;
     align-items: center;
     color: #8b8c8f;
+    width: 75px;
+    font-weight: 400;
   }
 }
 /////
