--- a/app/views/ratings/_internship_form_end.html.erb
+++ b/app/views/ratings/_internship_form_end.html.erb
@@ -3,7 +3,7 @@
     </div>
     <div class="text-end-form">
       <p>
-        Thank you! We <b>won't be sharing your details at any point</b> and it will help us validate the rating.
+        Thank you! We <span>won't be sharing your details at any point</span> and it will help us validate the rating.
         <span class="star-information-popover-link">
           <i class="fa fa-info-circle" data-target="#information-text-section-1"></i>
         </span>
