--- a/app/assets/stylesheets/components/_internship_professional_status.scss
+++ b/app/assets/stylesheets/components/_internship_professional_status.scss
@@ -75,6 +75,7 @@
     display: flex;
     align-items: center;
     flex: 0 0 50%;
+    height: 50%;
     .radio {
       margin: 0;
       height: 100%;
