--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -19,10 +19,8 @@
     }
   }
   .login-actions-container {
-    padding-right: 83.5px;
     width: 100%; 
     display: flex;
-    justify-content: flex-end;
     .login-actions {
       display: flex;
       justify-content: space-between;
@@ -34,16 +32,30 @@
 }
 
 @media (min-width: 768px) {
+  .yellow-navbar {
+    .login-actions-container {
+      padding-right: 83.5px;
+      justify-content: flex-end;
+    }
+  }
   .white-navbar {
-    padding: 10px 98.5px 0 98.5px;
+    padding: 2px 98.5px 0 98.5px;
+    height: 35px;
     .logo {
       max-height: 30px;
     }
   }
 }
 @media (max-width: 768px) {
+  .yellow-navbar {
+    .login-actions-container {
+      padding-right: 0px;
+      justify-content: center;
+    }
+  }
   .white-navbar {
     padding: 10px;
+    height: 40px;
     .logo {
       max-height: 40px;
     }
@@ -66,6 +78,7 @@
     border: 1px solid rgba(1,1,1,0.3);
   }
   .actions {
+    height: 100%;
     width: 650px;
     font-size: 14px;
     line-height: 23px;
@@ -85,10 +98,13 @@
     }
     .action-item {
       position: relative;
+      height: 100%;
       a {
-        display: inline-block;
+        display: block;
+        height: 100%;
       }
       .nav-dropdown {
+        top: 30px;
         left: -100px;
         width: 250px;
         position: absolute;
@@ -99,10 +115,12 @@
         background: white;
         padding: 20px;
         border-top: 3px solid #2EA3F2;
+        z-index: 9999999;
         &:hover {
           display: flex;
         }
         a {
+          flex:0 0;
           padding: 20px;
           &:hover {
             background-color: rgba(0,0,0,0.03);
