--- a/app/views/shared/_yellow_navbar.html.erb
+++ b/app/views/shared/_yellow_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="yellow-navbar">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-lg-6">
+      <div class="col-xs-12 col-md-6 col-sm-6 col-lg-6">
         <div class="social-actions">
           <a href="mailto:community@internsgopro.com">
             <i class="fa fa-envelope"></i> <span>community@internsgopro.com</span>
@@ -14,7 +14,7 @@
           </a>
         </div>
       </div>
-      <div class="hidden-xs col-lg-6">
+      <div class="hidden-xs col-md-6 col-sm-6 col-lg-6">
         <div class="login-actions-container">
           <div class="login-actions">
             <% unless user_signed_in? %>
